--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "react-todo-class",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://Akitotameto.github.io/react-todo-class",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
@@ -16,8 +15,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "deploy": "npm run build && gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
